--- a/brainfactory.html
+++ b/brainfactory.html
@@ -688,12 +688,11 @@
               </div>
               <div class="workshop-card bg-light-turquoise">
                 <h4>Organizational Design for Legal Teams in the Age of Artificial Intelligence</h4>
-                <p>This interactive workshop explores how artificial intelligence (AI) is reshaping the principles of
-                  organisational design. Participants will dive into practical strategies for building more dynamic and
-                  adaptive legal teams — rethinking processes, roles, structures, and culture to stay competitive in a
-                  rapidly changing, AI-driven world. By the end of the session, attendees will have actionable tools to
-                  rethink organisational design in the context of AI — from redefining job roles to fostering an
-                  innovation-ready culture in a legal team.
+                <p>This interactive workshop applies organisational design principles to AI integration challenges in
+                  legal teams. Participants will use design thinking to prototype new organisational structures,
+                  processes, and roles that leverage AI capabilities effectively. Through hands-on design exercises and
+                  real-world examples, attendees will work on practical organisational design prototypes they can
+                  further develop and implement in their own legal team.
                 </p>
                 <ul>
                   <p><strong>Facilitators:</strong></p>
