update to BF page¨

--- a/brainfactory.html
+++ b/brainfactory.html
@@ -714,6 +714,7 @@
                   <li>Cat Moon, Law Professor and Founding Co-Director, Vanderbilt AI + Law Lab (VAILL), Vanderbilt Law
                     School</li>
                 </ul>
+                <p><strong>Location:</strong> Dot.Legal, Fleminginkatu 10 A1 (Maps: Franzeninkatu 23)</p>
               </div>
 
               <div class="workshop-card bg-light-turquoise">
@@ -744,6 +745,8 @@
                   <li>Maaike de Langen, Senior Policy Advisor at the OECD</li>
                 </ul>
 
+                <p><strong>Location:</strong> DLA Piper, Kanavaranta 1</p>
+
               </div>
               <div class="workshop-card bg-light-turquoise">
                 <h4>Legal Design Writing: Telling the World and Getting Heard</h4>
@@ -761,6 +764,7 @@
                   <li>Lisa Toohey, Professor, UNSW Law & Justice</li>
                   <li>Michael Blasie, Dean and Professor of Law, KIMEP University</li>
                 </ul>
+                <p><strong>Location:</strong> Castrén & Snellman, Eteläesplanadi 14</p>
               </div>
               <div class="workshop-card bg-light-turquoise">
                 <h4>Legal Design From First Principles</h4>
@@ -778,10 +782,11 @@
                 <ul>
                   <li>Peter Hornsby, Designer - Edgerton Riley</li>
                 </ul>
+                <p><strong>Location:</strong> Oodi - Helsinki Central Library, Töölönlahdenkatu 4</p>
                 </p>
               </div>
               <div class="workshop-card bg-light-turquoise">
-                <h4>Organizational Design for Legal Teams in the Age of Artificial Intelligence</h4>
+                <h4>Organisational Design for Legal Teams in the Age of Artificial Intelligence</h4>
                 <p>This interactive workshop applies organisational design principles to AI integration challenges in
                   legal teams. Participants will use design thinking to prototype new organisational structures,
                   processes, and roles that leverage AI capabilities effectively. Through hands-on design exercises and
@@ -793,6 +798,7 @@
                   <li>Heikki Ilvessalo, CEO, ILVES</li>
                   <li>Maria Sorsimo, Head of Finland, Legora</li>
                 </ul>
+                <p><strong>Location:</strong> Alma Media, Alvar Aallon katu 3C</p>
               </div>
             </div>
           </div>
@@ -840,6 +846,7 @@
                     <li>Maged Helmy, Newcode.ai</li>
 
                   </ul>
+                  <p><strong>Location:</strong> DLA Piper, Kanavaranta 1</p>
                 </div>
 
                 <div class="workshop-card bg-light-turquoise">
@@ -856,8 +863,10 @@
                   <p><strong>Facilitators:</strong></p>
                   <ul>
                     <li>Stefania Passera, Contract Design Expert, CEO, Passera Design</li>
+                    <li>Paula Doyle, Contract Design Expert, PaLiDa Ltd</li>
 
                   </ul>
+                  <p><strong>Location:</strong> Oodi - Helsinki Central Library, Töölönlahdenkatu 4</p>
                 </div>
                 <div class="workshop-card bg-light-turquoise">
                   <h4>Enabling Digital Transformation through Legal Design</h4>
@@ -874,6 +883,7 @@
                       Professor at Fundação Getulio Vargas Law School (Brazil)</li>
                     <li>Pia Madissoo, Legal Transform & Operate Lead, EY (Finland)</li>
                   </ul>
+                  <p><strong>Location:</strong> EY Finland, Korkeavuorenkatu 32-34</p>
                 </div>
                 <div class="workshop-card bg-light-turquoise">
                   <h4>Legal Design for Sustainability</h4>
@@ -898,6 +908,7 @@
                     <li>Ebru Metin, Researcher, TalTech, Founder of Legal Design Turkey</li>
                     <li> Anne Ketola, Senior Researcher, Tampere University</li>
                   </ul>
+                  <p><strong>Location:</strong> Castrén & Snellman, Eteläesplanadi 15</p>
                 </div>
               </div>
             </div>
@@ -935,9 +946,12 @@
                     <div class="bubble"></div>
                     <h4>Q: How do I participate?</h4>
                     <p>
-                      BrainFactory is full! Please register for the waitlist
-                      <a href="mailto:brainfactory@legaldesignsummit.com" style="color: #c30979;">here</a>.
+                      If you would like to be added to the BrainFactory waiting list, please fill out
+                      <a href="https://docs.google.com/forms/d/e/1FAIpQLSeGxxc0eitud-iWdqRPBA41LnTlQoO31eaw_cg0uff0fUu82g/viewform?usp=header"
+                        style="color: #c30979;">this form</a>.
                     </p>
+                    <p>If a spot opens up, we will email you what sessions are open and ask you to reply via email to
+                      confirm you can take that seat. </p>
                     <p>
                       Check your spam filters or add “brainfactory@legaldesignsummit.com” to your safe senders list to
                       ensure you receive our confirmation emails!
